--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
     "@koa/cors": "^3.0.0",
     "dotenv": "^8.2.0",
     "koa": "^2.11.0",
+    "koa-bodyparser": "^4.2.1",
     "koa-router": "^8.0.8",
     "mongoose": "^5.9.3"
   },
   "devDependencies": {
     "@types/dotenv": "^8.2.0",
     "@types/koa": "^2.11.2",
+    "@types/koa-bodyparser": "^4.3.0",
     "@types/koa-router": "^7.4.0",
     "@types/koa__cors": "^3.0.1",
     "@types/mongoose": "^5.7.3",
