--- a/package.json
+++ b/package.json
@@ -8,16 +8,22 @@
   },
   "dependencies": {
     "@koa/cors": "^3.0.0",
+    "bcrypt": "^4.0.1",
     "dotenv": "^8.2.0",
+    "jsonwebtoken": "^8.5.1",
     "koa": "^2.11.0",
     "koa-bodyparser": "^4.2.1",
+    "koa-passport": "^4.1.3",
     "koa-router": "^8.0.8",
     "mongoose": "^5.9.3"
   },
   "devDependencies": {
+    "@types/bcrypt": "^3.0.0",
     "@types/dotenv": "^8.2.0",
+    "@types/jsonwebtoken": "^8.3.8",
     "@types/koa": "^2.11.2",
     "@types/koa-bodyparser": "^4.3.0",
+    "@types/koa-passport": "^4.0.2",
     "@types/koa-router": "^7.4.0",
     "@types/koa__cors": "^3.0.1",
     "@types/mongoose": "^5.7.3",
