--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "serve": "nodemon --watch 'src/**/*' -e ts,tsx --exec ts-node ./src/app.ts",
+    "serve": "export NODE_ENV=development && nodemon --watch 'src/**/*' -e ts,tsx --exec ts-node ./src/app.ts",
     "build": "tsc",
     "start": "node dist/app.js"
   },
